[package]
name = "clob"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "clob"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { git = "https://github.com/coral-xyz/anchor" }
anchor-spl = { git = "https://github.com/coral-xyz/anchor" }
bytemuck = { version = "^1.7.2", features = ["derive", "min_const_generics"] }
lib-sokoban = { git = "https://github.com/metaproph3t/sokoban.git", branch = "add-borsh-3" }
