[package]
name = "clob"
version = "0.1.0"
edition = "2021"
authors = ["Proph3t <metaproph3t@protonmail.com>"]
license = "Apache-2.0"
repository = "https://github.com/metaDAOproject/YALOB"
description = "A simple and performant CLOB that targets the Solana runtime."
categories = ["cryptography::cryptocurrencies"]
keywords = ["solana", "defi", "ponzu"]

[lib]
crate-type = ["cdylib", "lib"]
name = "clob"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.28.0"
anchor-spl = "0.28.0"
bytemuck = { version = "^1.7.2", features = ["derive", "min_const_generics"] } 
